began fixing all the blurred backgrounds so that as they run through index.css, the containers with the class of blurbg get altered

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,6 @@
   height: 100%;
   padding: 1px !important;
   margin: 0;
-  background-color: red;
   background-image: url("/shubham-dhage--2eXWZkliWo-unsplash.jpg");
   background-size: cover;
   background-position: center;
@@ -23,30 +22,15 @@
 font-family: "forta" !important;  
 } 
 
-.landingpage-container {
+.body > blurbg {
   background-color: rgba(179,179,179,.01);
   backdrop-filter: blur(5px);
   color: rgb(250, 245, 230);
-  /* font-family: forta; */
-}
-
-.login-container {
-  background-color: rgba(179,179,179,.01);
-  backdrop-filter: blur(5px);
-  color: rgb(250, 245, 230);
-  /* font-family: forta; */
 }
 
 .brand {
   font-size: clamp(1em, 6vw, 10em);
 }
-
-.login-btn:hover {
-  border-radius: 75px;
-  color:rgb(250, 245, 230);
-  transform: scale(1.2);
-  box-sizing: border-box;
-} 
 
 button:hover {
   border-radius: 75px;
